--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
                     <!-- Basic Links -->
                     <div class="md:w-2/6 p-4 bg-white border-2 border-rose-900 rounded-lg shadow-lg">
                         <p class="text-center text-xl font-sans m-4">
-                            Github<br>
-                            Arduino Makers Hub<br>
-                            Linked In<br>
-                            LeetCode<br>
-                            Stack Overflow<br>
-                            W3 Schools Profile<br>
-                            Codepen<br>
+                            <a href="https://github.com/kirby-b" class="hover:text-red-600" target="_blank">Github</a><br>
+                            <a href="https://projecthub.arduino.cc/kirby-b" class="hover:text-red-600" target="_blank">Arduino Makers Hub</a><br>
+                            <a href="https://www.linkedin.com/in/brodie-kirby-1078bb2a7/" class="hover:text-red-600" target="_blank">Linked In</a><br>
+                            <a href="https://leetcode.com/u/Kirby-B/" class="hover:text-red-600" target="_blank">LeetCode</a><br>
+                            <a href="https://stackoverflow.com/users/24921093/brodie-kirby" class="hover:text-red-600" target="_blank">Stack Overflow</a><br>
+                            <a href="https://codepen.io/kirby-b" class="hover:text-red-600" target="_blank">Codepen</a><br>
                         </p>
                     </div>
                 </div>
@@ -49,9 +48,9 @@
                             <b>Websites Made By Me</b>
                         </div>
                         <p class="text-center text-xl font-sans m-4">
-                            Web Based Projects<br>
-                            Personal Website<br>
-                            Web Operation System (Hack Club Project)<br>
+                            <a href="https://github.com/kirby-b/WebBasedProjects" class="hover:text-red-600" target="_blank">Web Based Projects</a><br>
+                            <a href="https://github.com/kirby-b/kirby-b.github.io" class="hover:text-red-600" target="_blank">Personal Website</a><br>
+                            <a href="https://github.com/kirby-b/Web-OS" class="hover:text-red-600" target="_blank">Web Operation System (Hack Club Project)</a><br>
                         </p>
                     </div>
                 </div>
