Added the github icon
It looks good, so I will add the rest of the icons with the new format

--- a/index.html
+++ b/index.html
@@ -30,14 +30,20 @@
                 <div class="flex flex-col md:flex-row justify-center items-center md:space-x-6">
                     <!-- Basic Links -->
                     <div class="md:w-2/6 p-4 bg-white border-2 border-rose-900 rounded-lg shadow-lg">
-                        <p class="text-center text-xl font-sans m-4">
-                            <a href="https://github.com/kirby-b" class="hover:text-red-600" target="_blank">Github</a><br>
-                            <a href="https://projecthub.arduino.cc/kirby-b" class="hover:text-red-600" target="_blank">Arduino Makers Hub</a><br>
-                            <a href="https://www.linkedin.com/in/brodie-kirby-1078bb2a7/" class="hover:text-red-600" target="_blank">Linked In</a><br>
-                            <a href="https://leetcode.com/u/Kirby-B/" class="hover:text-red-600" target="_blank">LeetCode</a><br>
-                            <a href="https://stackoverflow.com/users/24921093/brodie-kirby" class="hover:text-red-600" target="_blank">Stack Overflow</a><br>
-                            <a href="https://codepen.io/kirby-b" class="hover:text-red-600" target="_blank">Codepen</a><br>
-                        </p>
+                        <div class="container mx-auto px-4">
+                            <div class="flex flex-col justify-center items-center text-xl font-sans m-4">
+                                <div class="md:w-1/5 p-4">
+                                    <img src="./images/github-icon.png" alt="Github Logo"
+                                        class="max-w-full h-auto">
+                                </div>
+                                <div><a href="https://github.com/kirby-b" class="hover:text-red-600" target="_blank">Github</a></div>
+                                <div><a href="https://projecthub.arduino.cc/kirby-b" class="hover:text-red-600" target="_blank">Arduino Makers Hub</a></div>
+                                <div><a href="https://www.linkedin.com/in/brodie-kirby-1078bb2a7/" class="hover:text-red-600" target="_blank">Linked In</a></div>
+                                <div><a href="https://leetcode.com/u/Kirby-B/" class="hover:text-red-600" target="_blank">LeetCode</a></div>
+                                <div><a href="https://stackoverflow.com/users/24921093/brodie-kirby" class="hover:text-red-600" target="_blank">Stack Overflow</a></div>
+                                <div><a href="https://codepen.io/kirby-b" class="hover:text-red-600" target="_blank">Codepen</a></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <br>
