added the rest of the icons + some other changes
- Added the Leetcode icon to images because I forgot to
- Added style to the logos and increased the border widths
- Changed some font styles to increase boldness and made the bottom title italic
- replaced the typed copyright symbol with hex

--- a/index.html
+++ b/index.html
@@ -29,18 +29,37 @@
                 <br>
                 <div class="flex flex-col md:flex-row justify-center items-center md:space-x-6">
                     <!-- Basic Links -->
-                    <div class="md:w-2/6 p-4 bg-white border-2 border-rose-900 rounded-lg shadow-lg">
+                    <div class="md:w-2/6 p-4 bg-white border-4 border-rose-900 rounded-lg shadow-lg">
                         <div class="container mx-auto px-4">
-                            <div class="flex flex-col justify-center items-center text-xl font-sans m-4">
+                            <div class="flex flex-col justify-center items-center text-2xl font-sans m-4 font-semibold">
                                 <div class="md:w-1/5 p-4">
-                                    <img src="./images/github-icon.png" alt="Github Logo"
-                                        class="max-w-full h-auto">
+                                    <img src="./images/github-icon.png" alt="Github Logo" class="max-w-full h-auto">
                                 </div>
                                 <div><a href="https://github.com/kirby-b" class="hover:text-red-600" target="_blank">Github</a></div>
+                                <br>
+                                <div class="md:w-1/5 p-4">
+                                    <img src="./images/arduino-icon.png" alt="Github Logo" class="max-w-full h-auto">
+                                </div>
                                 <div><a href="https://projecthub.arduino.cc/kirby-b" class="hover:text-red-600" target="_blank">Arduino Makers Hub</a></div>
+                                <br>
+                                <div class="md:w-1/5 p-4">
+                                    <img src="./images/linkedin-icon.png" alt="Github Logo" class="max-w-full h-auto">
+                                </div>
                                 <div><a href="https://www.linkedin.com/in/brodie-kirby-1078bb2a7/" class="hover:text-red-600" target="_blank">Linked In</a></div>
+                                <br>
+                                <div class="md:w-1/5 p-4">
+                                    <img src="./images/leetcode-icon.png" alt="Github Logo" class="max-w-full h-auto">
+                                </div>
                                 <div><a href="https://leetcode.com/u/Kirby-B/" class="hover:text-red-600" target="_blank">LeetCode</a></div>
+                                <br>
+                                <div class="md:w-1/5 p-4">
+                                    <img src="./images/stackoverflow-icon.png" alt="Github Logo" class="max-w-full h-auto">
+                                </div>
                                 <div><a href="https://stackoverflow.com/users/24921093/brodie-kirby" class="hover:text-red-600" target="_blank">Stack Overflow</a></div>
+                                <br>
+                                <div class="md:w-1/5 p-4">
+                                    <img src="./images/codepen-icon.png" alt="Github Logo" class="max-w-full h-auto">
+                                </div>
                                 <div><a href="https://codepen.io/kirby-b" class="hover:text-red-600" target="_blank">Codepen</a></div>
                             </div>
                         </div>
@@ -49,14 +68,16 @@
                 <br>
                 <div class="flex flex-col md:flex-row justify-center items-center md:space-x-6">
                     <!-- Websites I have made -->
-                    <div class="md:w-2/6 p-4 bg-white border-2 border-rose-900 rounded-lg shadow-lg">
-                        <div class="text-center text-2xl pb-2">
-                            <b>Websites Made By Me</b>
+                    <div class="md:w-2/6 p-4 bg-white border-4 border-rose-900 rounded-lg shadow-lg">
+                        <div class="text-center text-2xl pb-2 font-bold italic">
+                            Websites Made By Me
                         </div>
-                        <p class="text-center text-xl font-sans m-4">
-                            <a href="https://github.com/kirby-b/WebBasedProjects" class="hover:text-red-600" target="_blank">Web Based Projects</a><br>
-                            <a href="https://github.com/kirby-b/kirby-b.github.io" class="hover:text-red-600" target="_blank">Personal Website</a><br>
-                            <a href="https://github.com/kirby-b/Web-OS" class="hover:text-red-600" target="_blank">Web Operation System (Hack Club Project)</a><br>
+                        <p class="text-center text-xl font-sans m-4 font-semibold">
+                            <a href="https://github.com/kirby-b/WebBasedProjects" class="hover:text-red-600" target="_blank">Web Based Projects</a>
+                            <br><br>
+                            <a href="https://github.com/kirby-b/kirby-b.github.io" class="hover:text-red-600" target="_blank">Personal Website</a>
+                            <br><br>
+                            <a href="https://github.com/kirby-b/Web-OS" class="hover:text-red-600" target="_blank">Web Operation System (Hack Club Project)</a>
                         </p>
                     </div>
                 </div>
@@ -66,7 +87,7 @@
 
     <footer class="bg-gradient-to-r from-black to-red-950 text-white text-center py-6">
         <div class="max-w-6xl mx-auto px-4">
-            <p class="mt-6 text-sm">© 2024 Brodie Kirby.</p>
+            <p class="text-sm">&#xA9; 2024 Brodie Kirby.</p>
         </div>
     </footer>
 </body>
