--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Resume">
     <meta name="author" content="Brodie Kirby">
     <link href="./src/built.css" rel="stylesheet">
-    <title>Brodie Kirby Portfolio Main Page</title>
+    <title>Brodie Kirby Links Page</title>
 </head>
 
 <body class="topograph-bg flex flex-col min-h-screen">
