Updated style + added coffee link
- Images look better on phone now
- Buy Me A Coffee link

--- a/index.html
+++ b/index.html
@@ -32,35 +32,40 @@
                     <div class="md:w-2/6 p-4 bg-white border-4 border-rose-900 rounded-lg shadow-lg">
                         <div class="container mx-auto px-4">
                             <div class="flex flex-col justify-center items-center text-2xl font-sans m-4 font-semibold">
-                                <div class="md:w-1/5 p-4">
+                                <div class="md:w-1/5 w-1/2 p-4">
                                     <img src="./images/github-icon.png" alt="Github Logo" class="max-w-full h-auto">
                                 </div>
                                 <div><a href="https://github.com/kirby-b" class="hover:text-red-600" target="_blank">Github</a></div>
                                 <br>
-                                <div class="md:w-1/5 p-4">
+                                <div class="md:w-1/5 w-1/2 p-4">
                                     <img src="./images/arduino-icon.png" alt="Github Logo" class="max-w-full h-auto">
                                 </div>
                                 <div><a href="https://projecthub.arduino.cc/kirby-b" class="hover:text-red-600" target="_blank">Arduino Makers Hub</a></div>
                                 <br>
-                                <div class="md:w-1/5 p-4">
+                                <div class="md:w-1/5 w-1/2 p-4">
                                     <img src="./images/linkedin-icon.png" alt="Github Logo" class="max-w-full h-auto">
                                 </div>
                                 <div><a href="https://www.linkedin.com/in/brodie-kirby-1078bb2a7/" class="hover:text-red-600" target="_blank">Linked In</a></div>
                                 <br>
-                                <div class="md:w-1/5 p-4">
+                                <div class="md:w-1/5 w-1/2 p-4">
                                     <img src="./images/leetcode-icon.png" alt="Github Logo" class="max-w-full h-auto">
                                 </div>
                                 <div><a href="https://leetcode.com/u/Kirby-B/" class="hover:text-red-600" target="_blank">LeetCode</a></div>
                                 <br>
-                                <div class="md:w-1/5 p-4">
+                                <div class="md:w-1/5 w-1/2 p-4">
                                     <img src="./images/stackoverflow-icon.png" alt="Github Logo" class="max-w-full h-auto">
                                 </div>
                                 <div><a href="https://stackoverflow.com/users/24921093/brodie-kirby" class="hover:text-red-600" target="_blank">Stack Overflow</a></div>
                                 <br>
-                                <div class="md:w-1/5 p-4">
+                                <div class="md:w-1/5 w-1/2 p-4">
                                     <img src="./images/codepen-icon.png" alt="Github Logo" class="max-w-full h-auto">
                                 </div>
                                 <div><a href="https://codepen.io/kirby-b" class="hover:text-red-600" target="_blank">Codepen</a></div>
+                                <br>
+                                <div class="md:w-1/5 w-1/2 p-4">
+                                    <img src="./images/coffee.png" alt="Github Logo" class="max-w-full h-auto">
+                                </div>
+                                <div><a href="https://www.buymeacoffee.com/Kirbyb" class="hover:text-red-600" target="_blank">BuyMeACoffee</a></div>
                             </div>
                         </div>
                     </div>
