--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container mx-auto px-4">
                 <div class="flex flex-col md:flex-row justify-center items-center md:space-x-6">
                     <!-- Logo -->
-                    <div class="md:w-1/12 p-4">
+                    <div class="md:w-1/12 w-1/2 p-4">
                         <img src="./images/logo.png" alt="Kirby-b Logo"
                             class="max-w-full h-auto">
                     </div>
